# moodle-mediasite-proxy

./: .gitignore  Cargo.toml  README.md
chrome/: background.html  background.js  courseView.js  folderView.js  manifest.json  modView.js  moodle.css  options.html  options.js  package-lock.json  pageCommon.js  playerFrame.css  playerFrame.js  redir.js  settings.js
qd/: qd.py
src/: cache.rs  main.rs
