[package]
name = "mediasite-proxy"
version = "0.1.1"
authors = ["bdbai <bdbaiapp@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
hyper-rustls = "0.20"
rustls = { version = "0.17", features = ["dangerous_configuration"] }
webpki = "0.21"
http-body = "0.3"
lazy_static = "1.4"
futures = "0.3"
url = "2.1"
uuid = "0.8"
